crates/diffguard-core/src/snapshots/diffguard_core__render__tests__snapshot_markdown_with_suppressions.snap
---
source: crates/diffguard-core/src/render.rs
expression: md
---
## diffguard — WARN

Scanned **2** file(s), **30** line(s) (scope: `added`, base: `origin/main`, head: `HEAD`)

**Note:** 3 finding(s) suppressed via inline directives.

| Severity | Rule | Location | Message | Snippet |
|---|---|---|---|---|
| warn | `rust.no\_dbg` | `src/main.rs:10` | Remove dbg!/println! before merging. | `    dbg!(value);` |
