crates/diffguard-core/src/snapshots/diffguard_core__render__tests__snapshot_verdict_rendering.snap
---
source: crates/diffguard-core/src/render.rs
expression: md
---
## diffguard — WARN

Scanned **2** file(s), **35** line(s) (scope: `changed`, base: `feature/branch`, head: `HEAD`)

| Severity | Rule | Location | Message | Snippet |
|---|---|---|---|---|
| warn | `js.no\_console` | `src/utils.ts:42` | Remove console.log before merging. | `  console.log("debug info");` |
